--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
 <form action="/users" method="post" accept-charset="UTF-8">
   <input type="hidden" name="authenticity_token" value="jJa87aK1OpXfjojryBk2Db6thv0K3bSZeYTuW8hF4Ns">
-  <label for="username">Username :</label>
-  <input type="text" id="username" name="username"><br><br>
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email"><br><br>
-  <label for="password">Password:</label>
-  <input type="password" id="password" name="password"><br><br>
+  <label for="user[username]">Username :</label>
+  <input type="text" id="user[username]" name="user[username]"><br><br>
+  <label for="user[email]">Email:</label>
+  <input type="email" id="user[email]" name="user[email]"><br><br>
+  <label for="user[password]">Password:</label>
+  <input type="password" id="user[password]" name="user[password]"><br><br>
   <input type="submit" value="Submit">
 </form>
