--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<form action="/users" method="post" accept-charset="UTF-8">
+<%# <form action="/users" method="post" accept-charset="UTF-8">
   <input type="hidden" name="authenticity_token" value="jJa87aK1OpXfjojryBk2Db6thv0K3bSZeYTuW8hF4Ns">
   <label for="user[username]">Username :</label>
   <input type="text" id="user[username]" name="user[username]"><br><br>
@@ -7,4 +7,18 @@
   <label for="user[password]">Password:</label>
   <input type="password" id="user[password]" name="user[password]"><br><br>
   <input type="submit" value="Submit">
-</form>
+</form> %>
+
+<%=form_tag('/users') do -%>
+
+  <%=label_tag 'username', 'Username:'%>
+  <%=text_field_tag 'username'%><br><br>
+
+  <%=label_tag 'email', 'Email:'-%>
+  <%=email_field_tag 'email'-%><br><br>
+
+  <%=label_tag 'password', 'Password:'%>
+  <%=password_field_tag 'password'%><br><br>
+
+  <%= submit_tag 'Submit' %>
+<% end -%>
