Add edit and change values set and error show

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,16 +24,26 @@
   <%= submit_tag 'Submit' %>
 <% end -%>
 -->
+<% if @user.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+    <ul>
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
 
 <%= form_with model: @user do |form| %>
   <%= form.label :username, "Username:" %>
-  <%= form.text_field :username, placeholder: 'username', value: 'user' %>
+  <%= form.text_field :username, placeholder: 'username', value: @user[:username] %>
   <br><br>
   <%= form.label :email, "Email:" %>
-  <%= form.email_field :email, placeholder: 'email@email.com', value: 'user@email.fr'  %>
+  <%= form.email_field :email, placeholder: 'email@email.com', value: @user[:email]  %>
   <br><br>
   <%= form.label :password, "Password:" %>
-  <%= form.password_field :password, placeholder: 'pwd', value: '          '  %>
+  <%= form.password_field :password, placeholder: 'pwd', value: @user[:password]   %>
   <br><br>
   <%= form.submit %>
 <% end %>
